log

Wed 13 Mar 2024 08:28:26 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
f84e81e
Wed 13 Mar 2024 08:35:47 PM UTC: 
 exercises.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
747241b
Wed 13 Mar 2024 08:37:14 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
a835c9c
Wed 13 Mar 2024 08:39:47 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:18:27: error: subscripted value is neither array nor pointer nor vector
   18 |       if (arr[i] > numeroM[i])
      |                           ^
Compilation failed
91ed159
Wed 13 Mar 2024 08:40:25 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
bb036e3
Wed 13 Mar 2024 08:41:00 PM UTC: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 10/70
d098570
Wed 13 Mar 2024 08:46:03 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
786f250
Wed 13 Mar 2024 08:53:16 PM UTC: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
a9f25fe
Wed 13 Mar 2024 08:53:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
244a49d
Wed 13 Mar 2024 08:54:53 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
92b0273
Wed 13 Mar 2024 08:55:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
838bc0f
Wed 13 Mar 2024 08:56:21 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
c52dabc
Wed 13 Mar 2024 09:04:28 PM UTC: 
 exercises.c | 38 ++++++++++++++++++++++++++++++++++++--
 1 file changed, 36 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
fca8f8b
Wed 13 Mar 2024 09:22:26 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
132bd04
Sat 16 Mar 2024 06:38:30 PM UTC: 
 exercises.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:116:7: error: variable ‘descendente’ set but not used [-Werror=unused-but-set-variable]
  116 |   int descendente = 1;
      |       ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
18fca92
Sat 16 Mar 2024 06:40:05 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘checkSorted’:
exercises.c:139:3: error: ‘else’ without a previous ‘if’
  139 |   else
      |   ^~~~
Compilation failed
635d8e8
Sat 16 Mar 2024 06:40:28 PM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|3
total_score: 40/70
9a45311
Sat 16 Mar 2024 06:41:16 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
68dea25
Sat 16 Mar 2024 06:42:34 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|2
total_score: 50/70
b0e8e4d
Sat 16 Mar 2024 06:46:12 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
698fb3f
